--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "magicgh-homepage",
+  "name": "gatsby-starter-hello-world",
   "private": true,
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/magicgh/magicgh.github.io.git"
-  },
-  "author": {
-    "name": "magicgh",
-    "email": "magicgher@hotmail.com"
+  "description": "A simplified bare-bones starter for Gatsby",
+  "version": "0.1.0",
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
+    "start": "npm run format && npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.20.2",
-    "gatsby-plugin-manifest": "^2.3.1",
-    "gatsby-plugin-offline": "^3.1.0",
-    "gatsby-plugin-react-helmet": "^3.2.0",
-    "gatsby-theme-minimalist": "^1.0.7",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
-  },
-  "scripts": {
-    "develop": "gatsby develop",
-    "build": "npm run clean && gatsby build",
-    "serve": "gatsby serve",
-    "clean": "rimraf .cache public",
-    "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gatsby": "^3.8.1",
+    "gatsby-plugin-manifest": "^3.8.0",
+    "gatsby-plugin-offline": "^4.8.0",
+    "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-robots-txt": "^1.6.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.3.0",
+    "gatsby-plugin-emotion": "^6.8.0",
     "prettier": "^2.3.2",
-    "rimraf": "^3.0.2"
+    "react-icons": "^4.2.0",
+    "tailwindcss": "^2.2.4",
+    "twin.macro": "^2.6.1"
   },
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+  },
   "bugs": {
-    "url": "https://github.com/magicgh/magicgh.github.io/issues"
-  },
-  "homepage": "https://github.com/magicgh/magicgh.github.io#readme"
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  }
 }
